<resources>
    <string name="app_name">AADH Leads</string>
    <string name="version_text">Version %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="otp">OTP</string>
    <string name="follow_up">Followups</string>
    <string name="upcoming_follow_up">Upcoming Followups</string>
    <string name="missed_followup">Missed Followups</string>
    <string name="missed">Missed</string>
    <string name="leads">Leads</string>
    <string name="add_followup">Add Followup</string>
    <string name="change_status">Change Status</string>
    <string name="lead_activity_timeline">Lead Activity Timeline</string>
    <string name="change_agent">Change Agent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="null_placeholder">---</string>
    <string name="loading">Loading…</string>
    <string name="placeholder">placeholder</string>
    <string name="label_product">"Product: "</string>
    <string name="label_category">"Category: "</string>
    <string name="status">Status</string>
    <string name="label_time">"Time: "</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="we_sent_otp">We have sent an OTP to your Email address\nPlease check your inbox.</string>
    <string name="resend_code">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="followup_date">Followup Date</string>
    <string name="type">Type</string>
    <string name="remarks">Remarks</string>
    <string name="basic_info">Basic Info</string>
    <string name="followup_info">Followup Info</string>
    <string name="followup_history">Followup History</string>
    <string name="logout">LOGOUT</string>
    <string name="lead_details">Lead Details</string>
    <string name="final_status">Final Status</string>
    <string name="brand_name">Brand Name</string>
    <string name="reason">Reason</string>
    <string name="change">Change</string>
    <string name="invoice_value">Invoice Value</string>
    <string name="models">Models</string>
    <string name="invoice_no">Invoice No</string>
    <string name="agent">Agent</string>
    <string name="select_agent">Select Agent</string>
    <string name="save">Save</string>
    <string name="customer_name">Student Name *</string>
    <string name="customer_phone">Student Phone *</string>
    <string name="customer_email">Student Email</string>
    <string name="followup_date_time">Followup Date and Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="enter_remarks_hint">Enter remarks here…</string>
    <string name="lead_touch_date">Lead Touch Date</string>
    <string name="source">Source</string>
    <string name="followup_time">Followup Time</string>
    <string name="inquiry_for">Inquiry for</string>
    <string name="feedback">Feedback</string>
    <string name="cost">Cost</string>
    <string name="country">Country</string>
    <string name="search_country">Search Country…</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city">City *</string>
    <string name="new_lead">New Lead</string>
    <string name="closed_leads">Closed Leads</string>
    <string name="closed">Closed</string>
    <string name="select_country">Select country</string>
    <string name="search">Search…</string>
    <string name="india">INDIA</string>
    <string name="search_with">Search with name or phone.</string>
    <string name="completed">Completed</string>
    <string name="product">"Product: "</string>
    <string name="followup_type">"Type: "</string>
    <string name="otp_not_received_label">Didn\'t receive the OTP?</string>
    <string name="no_item">No item found!</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="greet">Hello,\n%1$s</string>
    <string name="sync">Sync</string>
    <string name="please_wait">Please wait…</string>
    <string name="alert">Alert</string>
    <string name="no_data_sync">No data to sync now.</string>
    <string name="gender">Gender</string>
    <string name="qualification">Qualification</string>
    <string name="university">University</string>
    <string name="course">Course</string>
    <string name="stream">Stream</string>
    <string name="parent_phone">Parent Phone</string>
    <string name="call">Call</string>
    <string name="not_found">No data found for selected item.</string>
    <string name="hi_greeting">Hi.</string>
    <string name="greeting_description">Let\'s get started</string>
    <string name="proceed">PROCEED</string>
</resources>