<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_followup"
        android:icon="@drawable/ic_follow_up"
        android:title="@string/follow_up" />

    <item
        android:id="@+id/navigation_missed_followup"
        android:icon="@drawable/ic_missed_follow_up"
        android:title="@string/missed" />

    <item
        android:id="@+id/navigation_leads"
        android:icon="@drawable/ic_lead"
        android:title="@string/leads" />

    <item
        android:id="@+id/navigation_closed_leads"
        android:icon="@drawable/ic_closed"
        android:title="@string/closed" />

</menu>