<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_15">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/followup_date_time"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="@dimen/margin_150"
                android:layout_height="@dimen/margin_40"
                android:background="@drawable/edit_bg"
                android:enabled="false"
                android:hint="@string/pick_date"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_1"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <ImageView
                android:id="@+id/iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="@dimen/margin_100"
                android:layout_height="@dimen/margin_40"
                android:layout_marginStart="@dimen/margin_10"
                android:background="@drawable/edit_bg"
                android:enabled="false"
                android:hint="@string/pick_time"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_1"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <ImageView
                android:id="@+id/iv_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clock" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/gender"
            android:textColor="@color/black" />

        <RelativeLayout
            android:id="@+id/rel_spin_status"
            android:layout_width="@dimen/margin_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/edit_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_spinner_arrow" />

            <Spinner
                android:id="@+id/spin_type"
                android:layout_width="@dimen/margin_200"
                android:layout_height="@dimen/margin_56"
                android:layout_margin="@dimen/margin_5"
                android:background="@null"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_type"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_10" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/remarks"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_100"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/edit_bg"
            android:gravity="start"
            android:hint="@string/enter_remarks_hint"
            android:inputType="textMultiLine"
            android:padding="@dimen/margin_5"
            android:textSize="@dimen/base_text_size" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_56"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>