<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ui.common.ChangeStatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/base_text_size" />


        <RelativeLayout
            android:id="@+id/spn_change_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/edit_bg"
            android:padding="@dimen/margin_5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_spinner_arrow" />

            <Spinner
                android:id="@+id/spin_status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_margin="@dimen/margin_5"
                android:background="@null"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress_change_status"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_label_final_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/final_status"
            android:textColor="@color/black"
            android:textSize="@dimen/base_text_size"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/rel_final_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/edit_bg"
            android:padding="@dimen/margin_5"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_spinner_arrow" />

            <Spinner
                android:id="@+id/spin_final_status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_5"
                android:background="@null"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lin_glen_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/invoice_no"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <EditText
                android:id="@+id/et_invoice_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_bg"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/models"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <EditText
                android:id="@+id/et_models"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_bg"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/invoice_value"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <EditText
                android:id="@+id/et_invoice_value"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_bg"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_other_brand_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/brand_name"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <EditText
                android:id="@+id/et_brand_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_56"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_bg"
                android:paddingStart="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/reason"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size" />

            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100"
                android:layout_marginTop="@dimen/margin_5"
                android:background="@drawable/edit_bg"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/margin_5"
                android:paddingTop="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_change_status"
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_56"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_50"
            android:text="@string/change" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>