<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_2"
    android:layout_marginTop="@dimen/margin_2"
    android:layout_marginEnd="@dimen/margin_2"
    android:layout_marginBottom="@dimen/margin_5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/txt_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_35"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/info_name_width"
                android:layout_height="match_parent"
                android:background="@color/text_bg"
                android:paddingStart="@dimen/margin_8"
                android:textColor="@color/black"
                android:paddingEnd="@dimen/margin_1"
                android:textSize="@dimen/tex_size_12"
                android:gravity="center_vertical"
                android:text="@string/followup_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_followup_date"
                android:paddingStart="@dimen/margin_5"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingEnd="@dimen/margin_1"
                android:textSize="@dimen/tex_size_12"
                android:gravity="center_vertical"
                android:text="@string/null_placeholder"/>

        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/text_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_35"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/info_name_width"
                    android:layout_height="match_parent"
                    android:background="@color/text_bg"
                    android:paddingStart="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:paddingEnd="@dimen/margin_1"
                    android:textSize="@dimen/tex_size_12"
                    android:gravity="center_vertical"
                    android:text="@string/type"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_type"
                    android:paddingStart="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/margin_1"
                    android:textSize="@dimen/tex_size_12"
                    android:gravity="center_vertical"
                    android:text="@string/null_placeholder"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@color/text_bg"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_35"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/info_name_width"
                    android:layout_height="match_parent"
                    android:background="@color/text_bg"
                    android:paddingStart="@dimen/margin_8"
                    android:textColor="@color/black"
                    android:paddingEnd="@dimen/margin_1"
                    android:textSize="@dimen/tex_size_12"
                    android:gravity="center_vertical"
                    android:text="@string/remarks"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_remarks"
                    android:paddingStart="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingEnd="@dimen/margin_1"
                    android:textSize="@dimen/tex_size_12"
                    android:gravity="center_vertical"
                    android:text="@string/null_placeholder"/>

            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>